<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant Review</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="add">Add</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="rBtn">Restaurants</string>
    <string name="aboutBtn">About</string>
    <string name="exitBtn">Exit</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_restaurant_list">RestaurantList</string>
    <string name="title_activity_add_restaurant">AddRestaurant</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phones">Phone</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="rating">Rating</string>
    <string name="save">Save</string>
    <string name="send_to">Share Restaurant</string>
    <string name="edit">Edit</string>
    <string name="location">Show Location</string>
    <string name="directions">Get Directions</string>
    <string name="share">Email</string>
    <string name="twit">Twitter</string>
    <string name="fbook">Facebook</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="exit">Exit</string>
    <string name="search_title">Find Restaurant</string>
    <string name="search_hint">Name or Tag</string>
    <string name="about">Restaurant Review an application for reviewing your favorite places to eat, recording it and sharing with your friends.</string>
    <string name="author1">Natallia Isayenka</string>
    <string name="author2">Anna Poluektova</string>
    <string-array name="food_array">
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Organic</item>
        <item>Italian</item>
        <item>Thai</item>
        <item>Jamaican</item>
        <item>Chinese</item>
        <item>Japanese</item>
    </string-array>

    <string name="title_activity_details_restaurant">DetailsRestaurant</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
