<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"/>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rBtn"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/button"
        android:background="@color/green" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutBtn"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/button2"
        android:background="@color/green" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/button3"
        android:background="@color/green" />

</LinearLayout>